--- a/site-1-main/index.CSS
+++ b/site-1-main/index.CSS
@@ -1,2 +1,14 @@
 body
-   background-color= :red
+   {
+      color: aliceblue;
+      background-color: black;
+      font-family: Georgia, 'Times New Roman', Times, serif;
+   }
+
+   ul{
+      display: flex;
+      justify-content: space-between;
+      list-style-type: none;
+      align-items: center;
+      padding: 16px;
+   }
